[gd_scene load_steps=23 format=3 uid="uid://p3v8hbwjmviy"]

[ext_resource type="PackedScene" uid="uid://uhmn6jvb8pf2" path="res://src/unit/character/enemy/enemy.tscn" id="1_lsjhg"]
[ext_resource type="Script" uid="uid://b3frule3l7jua" path="res://src/unit/character/enemy/orange/orange.gd" id="2_1ms0w"]
[ext_resource type="Texture2D" uid="uid://dvbqjhpr1uamc" path="res://asset/texture/unit/enemy/orange/ballon_line.webp" id="3_p0gak"]
[ext_resource type="Shader" uid="uid://d003qi8qm71iu" path="res://src/asset/shader/hurt_flash.gdshader" id="4_p0gak"]
[ext_resource type="Texture2D" uid="uid://bc5ut205efj16" path="res://asset/texture/unit/enemy/orange/idle.webp" id="5_scbd8"]
[ext_resource type="Texture2D" uid="uid://bjrbxh0181wpl" path="res://asset/texture/unit/enemy/orange/ballon.webp" id="6_p0gak"]
[ext_resource type="Script" uid="uid://cjlyed3rdu8i8" path="res://src/unit/common/behavior_tree/sequence.gd" id="7_y4nqm"]
[ext_resource type="Script" uid="uid://hjo2hvko5sdk" path="res://src/unit/common/behavior_tree/selector.gd" id="8_vvwfm"]
[ext_resource type="Script" uid="uid://wesw8ecwxchv" path="res://src/unit/character/enemy/orange/behavior/turn.gd" id="12_tdi6u"]
[ext_resource type="Script" uid="uid://yed1uqs061la" path="res://src/unit/character/enemy/orange/behavior/is_near_target.gd" id="13_a3x2j"]
[ext_resource type="Script" uid="uid://brhg0m5xy285l" path="res://src/unit/character/enemy/orange/behavior/move_to_target.gd" id="15_p0gak"]
[ext_resource type="Script" uid="uid://cdojug4kurlsq" path="res://src/unit/character/enemy/orange/behavior/patrol.gd" id="16_scbd8"]
[ext_resource type="Texture2D" uid="uid://cw000phtiy73a" path="res://asset/texture/unit/enemy/orange/hurt.webp" id="17_scbd8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scbd8"]
resource_local_to_scene = true
shader = ExtResource("4_p0gak")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5y3b"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4d7r7"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr42h"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_du1ih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_scbd8")]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/BallonSprite:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/BallonSprite:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Graphics/LineSprite:self_modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Graphics/LineSprite:self_modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Graphics/LineSprite:self_modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Graphics/LineSprite:self_modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Graphics/BallonSprite:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Graphics/BallonSprite:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Graphics/BallonSprite:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-30, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Graphics/BallonSprite:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_p0gak")]
}

[sub_resource type="Animation" id="Animation_6ehfg"]
resource_name = "die"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_scbd8")]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/BallonSprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.999521, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.031591, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/BallonSprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.999521, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.031591, 1, 1.2)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/LineSprite:self_modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/LineSprite:self_modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Graphics/LineSprite:self_modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Graphics/LineSprite:self_modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Graphics/BallonSprite:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Graphics/BallonSprite:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Graphics/BallonSprite:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-30, -0.25, 0, 0.25, 0, -22, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("HealthBar:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2xc5u"]
resource_name = "hurt"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_scbd8")]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-8, -0.25, 0, 0.25, 0, -9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/BallonSprite:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/BallonSprite:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_1ra0g"]
resource_name = "idle"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_scbd8")]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-8, -0.25, 0, 0.25, 0, -9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphics/BallonSprite:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphics/BallonSprite:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v7p3b"]
_data = {
&"RESET": SubResource("Animation_du1ih"),
&"die": SubResource("Animation_6ehfg"),
&"hurt": SubResource("Animation_2xc5u"),
&"idle": SubResource("Animation_1ra0g")
}

[node name="Orange" groups=["navigator"] instance=ExtResource("1_lsjhg")]
collision_mask = 257
script = ExtResource("2_1ms0w")
enemy_name = &"orange"
gravity = 0.0

[node name="Status" parent="." index="0"]
max_health = 6

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
visible = false
position = Vector2(0, -8)

[node name="ExplosionPoint" type="Marker2D" parent="Graphics" index="0"]
position = Vector2(0, -24)

[node name="LineSprite" type="Sprite2D" parent="Graphics" index="1"]
position = Vector2(0, -18)
texture = ExtResource("3_p0gak")

[node name="Sprite2D" parent="Graphics" index="2"]
material = SubResource("ShaderMaterial_scbd8")
position = Vector2(0, -8)
texture = ExtResource("5_scbd8")

[node name="BallonSprite" type="Sprite2D" parent="Graphics" index="3"]
position = Vector2(0, -30)
texture = ExtResource("6_p0gak")

[node name="CollisionShape2D" parent="Graphics/Hitbox" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_d5y3b")

[node name="Hurtbox" parent="Graphics" index="5"]
visible = false

[node name="CollisionShape2D" parent="Graphics/Hurtbox" index="0"]
visible = true
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_4d7r7")

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_lr42h")

[node name="PlayerChecker" type="RayCast2D" parent="." index="4"]
position = Vector2(0, -8)
target_position = Vector2(0, 8)
collision_mask = 261

[node name="HurtParticleQueue" parent="." index="5"]
overwrite_color = Color(1, 0.313726, 0, 1)

[node name="PatrolTimer" type="Timer" parent="Timers" index="1"]
wait_time = 2.0
autostart = true

[node name="SeekTimer" type="Timer" parent="Timers" index="2"]
wait_time = 0.05
autostart = true

[node name="GiveUpTimer" type="Timer" parent="Timers" index="3"]
wait_time = 4.0
one_shot = true

[node name="ActivateTimer" type="Timer" parent="Timers" index="4"]
wait_time = 0.5
autostart = true

[node name="Sequence" type="Node" parent="BehaviorTree" index="0"]
script = ExtResource("7_y4nqm")

[node name="Turn" type="Node" parent="BehaviorTree/Sequence" index="0"]
script = ExtResource("12_tdi6u")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Selector" type="Node" parent="BehaviorTree/Sequence" index="1"]
script = ExtResource("8_vvwfm")
metadata/_custom_type_script = "uid://hjo2hvko5sdk"

[node name="IsNearTarget" type="Node" parent="BehaviorTree/Sequence/Selector" index="0"]
script = ExtResource("13_a3x2j")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="MoveToTarget" type="Node" parent="BehaviorTree/Sequence/Selector" index="1"]
script = ExtResource("15_p0gak")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="Patrol" type="Node" parent="BehaviorTree/Sequence" index="2"]
script = ExtResource("16_scbd8")
metadata/_custom_type_script = "uid://p0yn5ixp2w53"

[node name="HealthBar" parent="." index="8"]
visible = false
offset_top = -18.0
offset_bottom = -17.0

[node name="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_v7p3b")
}

[connection signal="timeout" from="Timers/PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="timeout" from="Timers/SeekTimer" to="." method="_on_seek_timer_timeout"]
[connection signal="timeout" from="Timers/GiveUpTimer" to="." method="_on_give_up_timer_timeout"]
[connection signal="timeout" from="Timers/ActivateTimer" to="." method="_on_activate_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
